feat: 하드코딩 된 커스텀 어노테이션 파라미터 추가